# clawskillscope

./: .gitignore  IMPROVEMENTS.md  README.md  pyproject.toml  test_demo.py
examples/skills/: SKILL.md
src/clawskillscope/: attribution.py  comparator.py  evaluator.py  llm.py  main.py  models.py  parser.py  reporter.py  runner.py  visualizer.py
