[project]
name = "clawskillscope"
version = "0.1.0"
description = "OpenClaw Skill 评测与可视化工具"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "openai>=2.45.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "typer>=0.26.8",
]

[project.scripts]
clawscope = "clawskillscope.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
package = true

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true